@@ -25,7 +25,7 @@ import lombok.Setter;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.List;
+import java.util.Collections;
 
 public abstract class StatusTrackedMEPartMachine extends MEPartMachine implements IStatusTracked {
 
@@ -60,7 +60,7 @@ public abstract class StatusTrackedMEPartMachine extends MEPartMachine implement
             var controller = getControllers().iterator().next();
             title.append(" - ").append(controller.self().getDefinition().get().getName());
         }
-        return new PatternContainerGroup(icon, title, List.of());
+        return new PatternContainerGroup(icon, title, Collections.emptyList());
     }
 
     @Override
